<resources>
    <string name="app_name" translatable="false">Sudoku</string>
    <string name="sudoku" translatable="false">Sudoku</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="credit">Created By Pierre Tasssel</string>
    <string name="submit">Submit</string>
    <string name="selected_difficulty">Difficulty : </string>
    <string name="retry">Retry"</string>
    <string name="menu">Menu"</string>
    <string name="easy_success">Good job ! It was a piece of cake</string>
    <string name="medium_success">Congratulation ! Too easy for you</string>
    <string name="hard_success">Wahooo ! You\'re strong</string>
    <string name="time_success">You succed in </string>
    <string name="solver">Solve</string>
    <string name="solver_explanation">Type the incomplete Sudoku</string>
    <string name="solver_no_solution">There is no solution, please check the grid to correct potential errors</string>
    <string name="solver_no_unique">There is no unique solution, there is probably some missing row in the grid</string>
    <string name="okay">Okay</string>
    <string name="number">%d</string>
</resources>
